fix: use correct background color for plot tooltips in dark mode

--- a/static/figure.css
+++ b/static/figure.css
@@ -78,4 +78,7 @@ figure > svg {
   figcaption {
     color: #cccccc;
   }
+  g[aria-label='tip'] {
+    fill: #282828;
+  }
 }
